--- a/VirtualPultValves/VirtualPultValves.csproj
+++ b/VirtualPultValves/VirtualPultValves.csproj
@@ -40,6 +40,14 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="fmslapi, Version=1.0.0.0, Culture=neutral, PublicKeyToken=800057c2b283a020, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\SergLibrary\fmslapi.dll</HintPath>
+    </Reference>
+    <Reference Include="hostvega, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\SergLibrary\hostvega.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -49,6 +57,9 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="ValueModel">
+      <HintPath>..\..\GitWork\MnemoMalicov\ValueModel\ValueModel\bin\Debug\ValueModel.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -239,20 +250,6 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\fmsnet\fmslapi\fmslapi.csproj">
-      <Project>{DFBF2C76-486B-44FC-BE13-82C41EFEE1AF}</Project>
-      <Name>fmslapi</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\hostvega\hostvega.vcxproj">
-      <Project>{2E400F4E-DE4A-4A6B-9922-D805C288D040}</Project>
-      <Name>hostvega</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mnemo\ValueModel\ValueModel.csproj">
-      <Project>{8fe10a49-5b2e-4a5c-8847-9e7f5e4fe9c8}</Project>
-      <Name>ValueModel</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Data\XMLValues.xml">
