--- a/Malicow/VirtualNeptun/PultNeptun/PultNeptun/PultNeptun.csproj
+++ b/Malicow/VirtualNeptun/PultNeptun/PultNeptun/PultNeptun.csproj
@@ -54,7 +54,8 @@
     <Reference Include="ValueModel">
       <HintPath>..\..\..\..\VirtualPultValves\bin\Debug\ValueModel.dll</HintPath>
     </Reference>
-    <Reference Include="VirtualPultValves">
+    <Reference Include="VirtualPultValves, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\VirtualPultValves\bin\Debug\VirtualPultValves.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
@@ -66,8 +67,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Inpu_1View.xaml.cs">
+      <DependentUpon>Inpu_1View.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Inpu_2View.xaml.cs">
+      <DependentUpon>Inpu_2View.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="RInpuView.xaml.cs">
+      <DependentUpon>RInpuView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WConverter.cs" />
     <Page Include="DictionaryNeptun.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Inpu_1View.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Inpu_2View.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -90,6 +108,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="RInpuView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
