--- a/VirtualPultValves/VirtualPultValves.csproj
+++ b/VirtualPultValves/VirtualPultValves.csproj
@@ -40,10 +40,12 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="fmslapi">
+    <Reference Include="fmslapi, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SergLibrary\fmslapi.dll</HintPath>
     </Reference>
-    <Reference Include="hostvega">
+    <Reference Include="hostvega, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SergLibrary\hostvega.dll</HintPath>
     </Reference>
     <Reference Include="System" />
